@@ -1,3 +1,8 @@
+2008-04-09  Vincent Untz  <vuntz@gnome.org>
+
+	* gnome-clock-applet-mechanism.c: (_set_time),
+	(_rh_update_etc_sysconfig_clock): remove useless declarations
+
 2008-04-08  Vincent Untz  <vuntz@gnome.org>
 
 	Make some memory savings by not remembering useless data. The code to
